# Fake-vs-Real-img

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  script.js  server.py  styles.css
